# ws-not-editable

./: .gitignore
_ws/: CMakeLists.txt  layout_cmake  ws.yml
pkgA/: conanfile.py
pkgA/src/: CMakeLists.txt  helloA.cpp  helloA.h
pkgB/: conanfile.py
pkgB/src/: CMakeLists.txt  helloB.cpp  helloB.h
